--- a/index.html
+++ b/index.html
@@ -1,40 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+  </head>
+  <body>
     <nav id="desktop-nav">
-        <div class="logo">Chris Dragone</div>
-        <div>
-            <ul class = "nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contacts">Contact</a></li>
-            </ul>
-        </div>
+      <div class="logo">Chris Dragone</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contacts">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Chris Dragone</div>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="menu-links">
-                <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#contacts" onclick="toggleMenu()">Contact</a></li>
-            </div>
+      <div class="logo">Chris Dragone</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contacts" onclick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
     </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img
+          src="./assets/profile-pic.jpg"
+          alt="Chris Dragone Profile Picture"
+        />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Chris Dragone</h1>
+        <p class="section__text__p2">IT Professional</p>
+        <div class="btn_container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/resume-example.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="socials-containter">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/chrisdragone'"
+          />
+          <img
+          src="./assets/github.png"
+          alt="My GitHub profile"
+          class="icon"
+          onclick="location.href='https://github.com/CPDragone'"
+          />
+        </div>
+      </div>
+    </section>
+ <section id="about">
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="Profile picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>2+ years <br />Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
+              reprehenderit et laborum, rem, dolore eum quod voluptate
+              exercitationem nobis, nihil esse debitis maxime facere minus sint
+              delectus velit in eos quo officiis explicabo deleniti dignissimos.
+              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
+              reiciendis ea magnam? Nulla, impedit fuga!
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">IT Infrastructure & Security Intern</h2>
+            <h3 class = "experience-sub-sub-title">Wakefern Food Corporation</h3>
+            <div class="article-container">
+              <img src="./assets/wakefern.jpg" alt="Descriptive Alt Text" class="exp-image">
+              <div class="content">
+                  <ul class="bulleted-list">
+                      <li>Key contributor in Wakeferns second largest project, a company-wide email migration of 13,000 mailboxes from the legacy platform IBM Notes to Microsoft Outlook
+                      </li>
+                      <li>Utilized Excel/SQL functions in the analysis, extraction, and formatting of company data, resolving missing member information necessary for a successful migration</li>
+                      <li>Provided input data and assistance in development of Powershell scripts responsible for re-creating the companies distribution lists in Outlook through Active Directory
+                      </li>
+                      <li>Executed administrative tasks in Microsoft Exchange Admin</li>
+                      <li>Participated in daily stand up meetings for email migration, as well as other aspects of the company such as Database Management, DevOps, SAP, NFM and Security
+                      </li>
+                      <li>Assisted employees with Outlook issues through migration, including a weekly Q&A
+                      </li>
+                  </ul>
+                  <button class="btn learn-more" onclick="location.href='wakefern.html'">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Coding For Big Data Intern</h2>
+            <h3 class = "experience-sub-sub-title">The Global Tech Experience</h3>
+            <div class="article-container">
+              <img src="./assets/gtx.jpg" alt="Descriptive Alt Text" class="exp-image">
+              <div class="content">
+                  <ul class="bulleted-list">
+                      <li>Internship program with the goal of teaching applied job skills in working with data contained in relational databases</li>
+                      <li>Gaining real world experience in data wrangling & analysis through Python and SQL</li>
+                      <li>Built compelling visualizations in Tableau to communicate data insights effectively</li>
+                      <li>Learning SQL query structure for sorting, filtering, grouping, joining &  aggregation</li>
+                      <li>Projects working with company data from Kickstart, Doordash, ESPN, YouTube, etc</li>
+                  </ul>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <button class="btn learn-more" onclick="location.href='gtx.html'">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+    </section>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
